fix(wifi): fix alignment and display of network settings

--- a/src/components/QuickSettings/quick-settings.css
+++ b/src/components/QuickSettings/quick-settings.css
@@ -30,7 +30,24 @@
   font-family: 'Abc_mono';
   width: 89%;
   padding-left: 18px;
+  white-space: nowrap;
 }
+
+.settings-entry {
+  align-self: center;
+  height: auto;
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+
+}
+
+.settings-text {
+  text-transform: none !important;
+  font-size: 20px;
+  align-self: center;
+}
+
 
 .active-setting {
   color: black;
